# gametank-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  gtfo_split.sh  justfile  link.ld
.cargo/: config.toml
alt_banks/: link.ld
alt_banks/.cargo/: config.toml
alt_banks/bank_0/: Cargo.toml
alt_banks/bank_0/src/: lib.rs
dgtf-macros/: Cargo.toml
dgtf-macros/assets/: minifont-p.json  minifont-sp.json
dgtf-macros/src/: bmp.rs  lib.rs
dgtf-macros/tests/: bmp.rs
examples/: hello.rs  my_function.asm
examples/bouncing_ball/: main.rs
examples/maximum_jumpman/: font.rs  gamer.rs  ideas.md  main.rs  stuff.rs
examples/maximum_jumpman/aesthetic/: background.rs  grass.rs  mod.rs
examples/maximum_jumpman/assets/: Sprite-0001-Recovered-Recovered.aseprite  gamer.aseprite  gamer.json  gamer_con_polvo.json  gamer_dust.json  microvoid.tiled-session  other_stuff.aseprite  other_stuff_2.aseprite  title.aseprite  title.json
examples/maximum_jumpman/bad_dudes/: mod.rs
examples/maximum_jumpman/gamestates/: mod.rs  playing.rs  runup.rs  start_menu.rs
examples/microvoid/: font.rs  gamer.rs  gamestates.rs  ideas.md  main.rs  player.rs  stuff.rs
examples/microvoid/aesthetic/: background.rs  grass.rs  mod.rs
examples/microvoid/assets/: gamer.aseprite  gamer_con_polvo.json  minifont-p.json  other_stuff.aseprite  other_stuff.json  palette.ase
examples/microvoid/bad_dudes/: mod.rs
examples/microvoid/gamestates/: mod.rs  playing.rs  runup.rs  start_menu.rs
examples/microvoid/system/: bcr.rs  console.rs  inputs.rs  mod.rs  position.rs  scr.rs  sprite.rs  via.rs  vram.rs
main_bank/: Cargo.toml  link.ld
main_bank/src/: boot.rs
src/: boot.rs  interrupts.asm  lib.rs  nop.asm
src/crt/: _readme.md  divmod.rs  mod.rs  mul.rs  shift.rs
src/crt0/: init-stack.asm
src/system/: bcr.rs  console.rs  mod.rs  position.rs  rectangle.rs  scr.rs  sprite.rs  via.rs
