[package]
name = "gt-crust"
version = "0.1.0"
authors = ["dwbrite"]
edition = "2021"

build = "build.rs"

[profile.release]
strip = true
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"


[dependencies]
volatile = "0.2.6"
bit_field = "0.9.0"

[dev-dependencies]
volatile = "0.2.6"
bit_field = "0.9.0"

[features]
default = []
manual_init = []
