[package]
name = "gt-crust"
version = "0.1.0"
authors = ["dwbrite"]
edition = "2021"

build = "build.rs"

[profile.release]
strip = "symbols"
opt-level = "z"  # Optimize for size.
lto = "fat"
codegen-units = 1
panic = "abort"
incremental = true # should not affect final binary size


[dependencies]
volatile = "0.2.6"
bit_field = "0.9.0"
wyhash = "0.5.0"
dgtf_macros = { path = "dgtf-macros" }
enum_delegate = "0.2.0"
fixed = "2.0.0-alpha.25.1"
az = "1.2.1" # for fixed cast
derive_more = "0.99.17"


[dev-dependencies]
volatile = "0.2.6"
bit_field = "0.9.0"
wyhash = "0.5.0"
dgtf_macros = { path = "dgtf-macros" }
enum_delegate = "0.2.0"
fixed = "1.25.0"
derive_more = "0.99.17"

[features]
default = []
manual_init = []
