[package]
name = "dgtf_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.41", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
tinybmp = "0.5.0"
embedded-graphics = "0.8.1"
colors-transform = "0.2.11"
lzss = "0.9.1"
serde_json = "1.0.108"
serde = {  version = "1.0.193", features = ["serde_derive"] }